fix time travel input layout on mobile firefox

--- a/frontend/assets/css/index.css
+++ b/frontend/assets/css/index.css
@@ -112,6 +112,12 @@ a:active {
 .timeField>input,
 .timeField>select {
     height: 20px;
+    font-size: 15px;
+    padding: 0;
+}
+
+.timeField > input[type="number"] {
+    width: 60px;
 }
 
 #conversationOrderSelect {
